updated from beta to stable
Signed-off-by: Frank Suits <frankst@au1.ibm.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ author_email = avikas@in.ibm.com
 license = Apache Software License v2
 url = https://ibm.github.io/compliance-trestle
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Information Technology
