--- a/setup.cfg
+++ b/setup.cfg
@@ -86,9 +86,10 @@ dev =
     
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
-branch = main
+branch = v1.0.0-rc
 upload_to_pypi = true
 version_source = commit
+prerelease_tag = rc
 
 [flake8]
 # WARNING: This should be kept compatible with .pre-commit-config.yaml
