force backlevel cryptography due to blowfish issue
Signed-off-by: Frank Suits <frankst@au1.ibm.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ include_package_data = True
 install_requires =
     attrs~=19.3
     ilcli
+    cryptography == 36.0.2
     paramiko
     ruamel.yaml
     furl
