--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ include_package_data = True
 install_requires =
     attrs~=19.3
     ilcli
+    cryptography == 36.0.2  #37.0.0 introduced blowfish issue.  Open this back up when release fixes it
     paramiko
     ruamel.yaml
     furl
