--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       - id: check-yaml
         exclude: "tests/data/yaml/bad_simple.yaml"
       - id: no-commit-to-branch
-        args: [--branch, main]
+        args: [--branch, develop, --branch, main]
   - repo: https://github.com/pre-commit/mirrors-yapf
     rev: v0.32.0
     hooks:
