Downgrade version of mkdocstrings
Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,7 @@ dev =
     mypy
     # # Docs website
     mkdocs
-    mkdocstrings
+    mkdocstrings==0.18.0 ## See issue 1135
     mkdocs-material
     markdown-include
     pymdown-extensions
