temp fix to markdown version
Signed-off-by: Frank Suits <frankst@au1.ibm.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ dev =
     python-dateutil
     mypy
     # # Docs website
+    markdown==3.3.7  ## release broke mkdocs July 16, 2022
     mkdocs
     mkdocstrings==0.18.0 ## See issue 1135
     mkdocs-material
