--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,7 @@ dev =
     mypy
     # # Docs website
     mkdocs
-    mkdocstrings==0.18.0 ## See issue 1135
+    mkdocstrings[python-legacy]>=0.19.0
     mkdocs-material
     markdown-include
     pymdown-extensions
