--- a/tests/data/yaml/header_with_metadata.yaml
+++ b/tests/data/yaml/header_with_metadata.yaml
@@ -1,5 +1,5 @@
 # Each control must have a header describing its implementation requirements and status.
-# This header represents the the FedRAMP required content.
+# This header represents ssp content.
 #
 # For control origination include all that apply and delete those that do not apply.
 # Controls ending in '-1' only allow sp-corporate and sp-system as options.
@@ -9,7 +9,7 @@
 # Any option shown with an associated value must have that value provided
 #
 # Each control must have at least one responsible role.  If more than one, enter as separate list items.
-x-trestle-fedramp-props:
+x-trestle-props:
   control-origination:
     - sp-corporate
     - sp-system
