fix: Bump mkdocstring version (#1151)
Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,12 +172,11 @@ plugins:
 - mkdocstrings:
     handlers:
       python:
-        rendering:
+        options:
           group_by_category: true
           show_category_heading: true
           show_if_no_docstring: true
           show_root_heading: true
-        selection:
           filters:
           - '!^_[^_]'
           - '!^__json'
