--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ include_package_data = True
 install_requires =
     attrs~=19.3
     ilcli
-    cryptography == 36.0.2  #37.0.0 introduced blowfish issue.  Open this back up when release fixes it
+    cryptography
     paramiko
     ruamel.yaml
     furl
@@ -39,7 +39,7 @@ install_requires =
     pywin32 >= 1.0;platform_system=='Windows'
     defusedxml
     openpyxl~=3.0
-    Jinja2 >= 3.0.1,<3.1.0 #version 3.1+ isnt supported
+    Jinja2 >= 3.0.1
     cmarkgfm==0.6.* #Update regularly
     orjson
 
