Address comments from Ekaterina.

--- a/tests/data/tasks/csv/demo-csv-to-oscal-cd.config
+++ b/tests/data/tasks/csv/demo-csv-to-oscal-cd.config
@@ -3,3 +3,4 @@
 csv-file = /home/degenaro/github/trestle.csv-to-cd/tests/data/spread-sheet/ocp4.csv
 output-dir = /tmp/degenaro/output
 output-overwrite = true
+namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd
