--- a/tests/data/tasks/csv/test-csv-to-oscal-cd.config
+++ b/tests/data/tasks/csv/test-csv-to-oscal-cd.config
@@ -3,3 +3,5 @@
 csv-file = tests/data/spread-sheet/good.csv
 output-dir = tests/data/tasks/csv/output
 output-overwrite = true
+namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd
+user-namespace = http://abc.github.io/compliance-trestle/schemas/oscal/cd
