--- a/tests/data/tasks/csv/test-csv-to-oscal-cd.config
+++ b/tests/data/tasks/csv/test-csv-to-oscal-cd.config
@@ -1,7 +1,10 @@
 [task.csv-to-oscal-cd]
 
-csv-file = tests/data/spread-sheet/good.csv
+csv-file = tests/data/spread-sheet/ocp4-user.csv
 output-dir = tests/data/tasks/csv/output
 output-overwrite = true
 namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd
 user-namespace = http://abc.github.io/compliance-trestle/schemas/oscal/cd
+class.Rule_Id = scc_class
+class.Rule_Description = scc_class
+class.Private_Reference_Id = user_class
