--- a/tests/data/tasks/csv/test-csv-to-oscal-cd.config
+++ b/tests/data/tasks/csv/test-csv-to-oscal-cd.config
@@ -1,7 +1,8 @@
 [task.csv-to-oscal-cd]
 
+catalog-file = tests/data/ocp4-cis/catalog.json
 csv-file = tests/data/spread-sheet/ocp4-user.csv
-output-dir = tests/data/tasks/csv/output
+output-dir = tmp
 output-overwrite = true
 namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd
 user-namespace = http://abc.github.io/compliance-trestle/schemas/oscal/cd
