--- a/tests/data/tasks/csv/test-csv-to-oscal-cd.config
+++ b/tests/data/tasks/csv/test-csv-to-oscal-cd.config
@@ -1,6 +1,7 @@
 [task.csv-to-oscal-cd]
 
 title = Component definition for CIS Red Hat OpenShift Container Platform 4 Benchmark profiles
+version = V1.1
 csv-file = tests/data/spread-sheet/ocp4-user.csv
 output-dir = tmp
 output-overwrite = true
