--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     paramiko
     ruamel.yaml
     furl
+    importlib-metadata<5.0
     pydantic[email]>=1.8.2
     python-dotenv>=0.10.4
     datamodel-code-generator[http] >= 0.11.14
