--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ extra:
 markdown_extensions:
 - admonition
 - markdown_include.include
+- md_in_html
 - pymdownx.emoji
 - pymdownx.magiclink
 - pymdownx.superfences
@@ -17,20 +18,22 @@ markdown_extensions:
 - toc:
     permalink: ¤
 nav:
-- Trestle overview: index.md
+- Overview: index.md
 - Installation: python_trestle_setup.md
 - Tutorials:
   - Intro to trestle workflow: tutorials/trestle_sample_workflow.md
   - Compliance posture: tutorials/continuous-compliance/continuous-compliance.md
-  - SSP, Catalog, and Profile Authoring: tutorials/ssp_profile_catalog_authoring/ssp_profile_catalog_authoring.md
-  - Transformer construction: tutorials/task.transformer-construction/transformer-construction.md
-  - Task - ocp4-cis-profile-to-oscal-catalog: tutorials/task.ocp4-cis-profile-to-oscal-catalog/transformation.md
-  - Task - ocp4-cis-profile-to-oscal-cd: tutorials/task.ocp4-cis-profile-to-oscal-cd/transformation.md
-  - Task - tanium-result-to-oscal-ar: tutorials/task.tanium-result-to-oscal-ar/transformation.md
-- Trestle command-line interface (CLI):
-  - CLI for OSCAL documents: cli.md
-  - Trestle CLI for Governance of Authored Documents: trestle_author.md
-  - CLI for jinja template processing: trestle_author_jinja.md
+  - Trestle Authoring:
+    - Governance of Authored Documents: trestle_author.md
+    - SSP, Catalog, and Profile Authoring: tutorials/ssp_profile_catalog_authoring/ssp_profile_catalog_authoring.md
+  - Trestle Transformers and Tasks:
+    - Transformer construction: tutorials/task.transformer-construction/transformer-construction.md
+    - Task - ocp4-cis-profile-to-oscal-catalog: tutorials/task.ocp4-cis-profile-to-oscal-catalog/transformation.md
+    - Task - ocp4-cis-profile-to-oscal-cd: tutorials/task.ocp4-cis-profile-to-oscal-cd/transformation.md
+    - Task - tanium-result-to-oscal-ar: tutorials/task.tanium-result-to-oscal-ar/transformation.md
+  - Trestle command-line interface (CLI):
+    - CLI for OSCAL documents: cli.md
+    - CLI for Jinja Template processing: trestle_author_jinja.md
 - Contributing:
   - Code of Conduct: mkdocs_code_of_conduct.md
   - Contributing overview: contributing/mkdocs_contributing.md
@@ -195,6 +198,7 @@ site_url: https://ibm.github.io/compliance-trestle
 theme:
   features:
   - content.code.annotate
+  - navigation.tabs
   name: material
   palette:
     accent: purple
