--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ nav:
   - Trestle Transformers and Tasks:
     - Transformer construction: tutorials/task.transformer-construction/transformer-construction.md
     - Task - task.csv-to-oscal-cd: tutorials/task.csv-to-oscal-cd/transformation.md
-    - Task - task.csv-to-oscal-cd -> input csv format: tutorials//task.csv-to-oscal-cd/csv-to-oscal-cd.md
+    - Task - task.csv-to-oscal-cd -> input csv format: tutorials/task.csv-to-oscal-cd/csv-to-oscal-cd.md
     - Task - ocp4-cis-profile-to-oscal-catalog: tutorials/task.ocp4-cis-profile-to-oscal-catalog/transformation.md
     - Task - ocp4-cis-profile-to-oscal-cd: tutorials/task.ocp4-cis-profile-to-oscal-cd/transformation.md
     - Task - tanium-result-to-oscal-ar: tutorials/task.tanium-result-to-oscal-ar/transformation.md
