--- a/tests/data/yaml/good_simple.yaml
+++ b/tests/data/yaml/good_simple.yaml
@@ -5,6 +5,6 @@ responsible-roles:
 - Customer
 x-trestle-set-params:
   ac-1_prm_5:
-    label: meetings cancelled
-    profile-values: no meetings
-    values:
+    label: meetings cancelled from cli yaml
+    profile-values: no meetings from cli yaml
+    values: new values from cli yaml
