updated gen_oscal and submodules for oscal 1.04
Signed-off-by: Frank Suits <47203786+fsuits@users.noreply.github.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "nist-source"]
 	path = nist-source
 	url = https://github.com/usnistgov/OSCAL.git
+	branch = main
 [submodule "nist-content"]
 	path = nist-content
 	url = https://github.com/usnistgov/oscal-content.git
+	branch = main
