--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "nist-source"]
 	path = nist-source
 	url = https://github.com/usnistgov/OSCAL.git
-	branch = main
+	branch = develop
 [submodule "nist-content"]
 	path = nist-content
 	url = https://github.com/usnistgov/oscal-content.git
-	branch = main
+	branch = develop
