--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ packages = find:
 include_package_data = True
 
 install_requires =
-    attrs~=19.3
+    attrs
     ilcli
     cryptography
     paramiko
