feat: csv to oscal cd new format csv file
Signed-off-by: degenaro <lou.degenaro@gmail.com>

--- a/tests/data/tasks/csv-to-oscal-cd/test-csv-to-oscal-cd-bp.config
+++ b/tests/data/tasks/csv-to-oscal-cd/test-csv-to-oscal-cd-bp.config
@@ -2,11 +2,9 @@
 
 title = Component definition for Best Practices
 version = V1.1
-csv-file = tests/data/csv/bp.sample.csv
+csv-file = tests/data/csv/bp.sample.v2.csv
 output-dir = tmp
 output-overwrite = true
-namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd
-user-namespace = http://abc.github.io/compliance-trestle/schemas/oscal/cd
 class.Rule_Id = scc_class
 class.Rule_Description = scc_class
 class.Parameter_Id = scc_class
