--- a/tests/data/tasks/csv-to-oscal-cd/test-csv-to-oscal-cd.config
+++ b/tests/data/tasks/csv-to-oscal-cd/test-csv-to-oscal-cd.config
@@ -2,11 +2,9 @@
 
 title = Component definition for CIS Red Hat OpenShift Container Platform 4 Benchmark profiles
 version = V1.1
-csv-file = tests/data/csv/ocp4-user.csv
+csv-file = tests/data/csv/ocp4-user.v2.csv
 output-dir = tmp
 output-overwrite = true
-namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd
-user-namespace = http://abc.github.io/compliance-trestle/schemas/oscal/cd
 class.Rule_Id = scc_class
 class.Rule_Description = scc_class
 class.Parameter_Id = scc_class
