--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -42,6 +42,7 @@ jobs:
       uses: actions/checkout@v2
 
     # Initializes the CodeQL tools for scanning.
+    # moved from v1 to v2 20230301
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
