--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "nist-source"]
 	path = nist-source
 	url = https://github.com/usnistgov/OSCAL.git
-	branch = release-1.0
+	branch = develop
 [submodule "nist-content"]
 	path = nist-content
 	url = https://github.com/usnistgov/oscal-content.git
