--- a/setup.cfg
+++ b/setup.cfg
@@ -116,7 +116,7 @@ show_error_codes = True
 show_error_context = True
 # disallow-untyped-calls = True
 disallow_untyped_defs = True
-disable_error_code = union-attr, attr-defined, no-redef, assignment, arg-type
+disable_error_code = union-attr, attr-defined, no-redef, assignment, arg-type, list-item
 
 [mypy-trestle.oscal.*]
 ignore_errors = True
