fix: adding current branch to run pr title action
Signed-off-by: Alejandro Jose Leiva Palomo <alejandro.leiva.palomo@ibm.com>

--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - 'develop'
       - 'main'
+      - 'fix/change-lint-title-action'
 jobs:
   lint:
     if: ${{ github.head_ref != 'develop' }}
