--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -28,7 +28,7 @@ jobs:
           sudo apt install -y git curl
           curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
           sudo DEBIAN_FRONTEND=noninteractive apt install -y nodejs
-      - name: Install commitlint
+      - name: Install commitlint local
         run: |
           npm install conventional-changelog-conventionalcommits
           npm install commitlint@latest
