--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -23,7 +23,7 @@ jobs:
           token: ${{ secrets.ADMIN_PAT }}
       - name: Install required dependencies
         run: |
-          apt update
+          sudo apt update
           apt install -y sudo
           sudo apt install -y git curl
           curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
