--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -36,5 +36,5 @@ jobs:
         if: github.event_name == 'push'
         run: npx commitlint --from HEAD~1 --to HEAD --verbose
       - name: Validate PR commits with commitlint
-        if: github.event_name == 'pull_request'
+        if: pull_request_target == opened || pull_request_target == edited || pull_request_target == synchronize
         run: npx commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
