--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-          ref: main
+          ref: fix/change-lint-title-action
           fetch-depth: 0
           token: ${{ secrets.ADMIN_PAT }}
       - name: Install required dependencies
