--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -37,4 +37,4 @@ jobs:
         run: npx commitlint --from HEAD~1 --to HEAD --verbose
       - name: Validate PR commits with commitlint
         if: github.event_name == 'pull_request_target'
-        run: npx commitlint --config commitlint.config.js --from ${{ github.event.pull_request.commits[0].message }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.commits[0].message }}~${{ github.event.pull_request.commits }} --verbose
+        run: npx commitlint --config commitlint.config.js --from ${{ github.event.pull_request.commits[0] }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.commits[0] }}~${{ github.event.pull_request.commits }} --verbose
