--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -32,9 +32,12 @@ jobs:
         run: |
           npm install conventional-changelog-conventionalcommits
           npm install commitlint@latest
-      - name: Validate current commit (last commit) with commitlint
-        if: github.event_name == 'push'
-        run: npx commitlint --from HEAD~1 --to HEAD --verbose
-      - name: Validate PR commits with commitlint
+      # - name: Validate PR title
+      #   if: github.event_name == 'pull_request_target'
+      #   run: npx commitlint --from HEAD~1 --to HEAD --verbose
+      # - name: Validate if only 1 commit
+      #   if: github.event.pull_request.commits <= 1
+      #   run: npx commitlint --from HEAD~1 --to HEAD --verbose
+      - name: Validate PR merge commit
         if: github.event_name == 'pull_request_target'
-        run: npx commitlint --config commitlint.config.js --from ${{ github.event.pull_request.commits[0] }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.commits[0] }}~${{ github.event.pull_request.commits }} --verbose
+        run: npx commitlint --config commitlint.config.js --from ${{ github.sha }} --to ${{ github.sha }} --verbose
