--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -28,6 +28,8 @@ jobs:
           sudo apt install -y git curl
           curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
           sudo DEBIAN_FRONTEND=noninteractive apt install -y nodejs
+      - name: Setup git config
+        run: git config --global init.defaultBranch fix/change-lint-title-action
       - name: Install commitlint local
         run: |
           npm install conventional-changelog-conventionalcommits
