--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -42,4 +42,4 @@ jobs:
       #   run: npx commitlint --from HEAD~1 --to HEAD --verbose
       - name: Validate PR merge commit
         if: github.event_name == 'pull_request_target'
-        run: npx commitlint --config commitlint.config.js --from ${{ github.event.pull_request.head.sha }} --to ${{ github.sha }} --verbose
+        run: npx commitlint --config commitlint.config.js --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.sha }} --verbose
