--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -35,7 +35,7 @@ jobs:
           npm install conventional-changelog-conventionalcommits
           npm install commitlint@latest
       - name: Validate PR title
-        if: github.event.pull_request.commits[0].message == github.event.pull_request.title && 
+        if: github.event.pull_request.commits[0].message == github.event.pull_request.title
         run: npx commitlint --from HEAD~1 --to HEAD --verbose
       # - name: Validate if only 1 commit
       #   if: github.event.pull_request.commits <= 1
