--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           npm install conventional-changelog-conventionalcommits
           npm install commitlint@latest
+          npm install -g @commitlint/cli @commitlint/config-conventional
       - name: Validate PR title
         if: github.event.pull_request.commits[0].message == github.event.pull_request.title
         run: npx commitlint --from HEAD~1 --to HEAD --verbose
