--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -13,16 +13,13 @@ jobs:
     if: ${{ github.head_ref != 'develop' }}
     runs-on: ubuntu-latest
     steps:
-      # Please look up the latest version from
-      # https://github.com/amannn/action-semantic-pull-request/releases
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-          ref: fix/change-lint-title-action
-          fetch-depth: 0
-          token: ${{ secrets.ADMIN_PAT }}
-      - name: Validate PR lint title
-        run: |
-          if [[ ${{ github.event.pull_request.title }} =~ ^(?<type>build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test|¯\\_\(ツ\)_\/¯)(?<scope>\(\w+\)?((?=:\s)|(?=!:\s)))?(?<breaking>!)?(?<subject>:\s.*)?|^(?<merge>Merge \w+) ]]; then
-              echo "Valid"
-          fi
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: npm install @commitlint/cli @commitlint/config-conventional
+
+    - name: Validate PR title
+      run: |
+        PR_TITLE=$(jq -r '.pull_request.title' "$GITHUB_EVENT_PATH")
+        echo "$PR_TITLE" | npx commitlint --config @commitlint/config-conventional
