fix: adding correct config
Signed-off-by: Alejandro Jose Leiva Palomo <alejandro.leiva.palomo@ibm.com>

--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Validate PR title
       run: |
         PR_TITLE=$(jq -r '.pull_request.title' "$GITHUB_EVENT_PATH")
-        echo "$PR_TITLE" | npx commitlint --config @commitlint/config-conventional
+        echo "$PR_TITLE" | npx commitlint --config commitlint.config.js
