--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -7,7 +7,8 @@ on:
       - edited
       - synchronize
     branches:
-      - 'fix/change-lint-title-action'
+      - 'main'
+      - 'develop'
 jobs:
   lint:
     if: ${{ github.head_ref != 'develop' }}
