--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -12,15 +12,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         include:
         - os: ubuntu-latest
           path: ~/.cache/pip
         - os: macos-latest
           path: ~/Library/Caches/pip
-        - os: windows-latest
-          path: ~\AppData\Local\pip\Cache
-        python-version: [3.8, 3.9]
+        python-version: [3.7.15, 3.8, 3.9]
 
     steps:
     - name: Don't mess with  line endings
