--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -91,13 +91,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, darwin-latest]
         include:
         - os: ubuntu-latest
           path: ~/.cache/pip
         - os: macos-latest
           path: ~/Library/Caches/pip
-        - os: windows-latest
+        - os: darwin-latest
           path: ~\AppData\Local\pip\Cache
         python-version: [3.7.16, 3.8, 3.9]
     steps:
