--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -92,6 +92,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.8, 3.9]
         include:
         - os: ubuntu-latest
           path: ~/.cache/pip
@@ -99,7 +100,12 @@ jobs:
           path: ~/Library/Caches/pip
         - os: windows-latest
           path: ~\AppData\Local\pip\Cache
-        python-version: [3.7.16, 3.8, 3.9]
+        - os: ubuntu-latest
+          python-version: 3.7
+        - os: macos-latest
+          python-version: 3.7
+        - os: windows-latest
+          python-version: 3.7
     steps:
     - name: Don't mess with line endings
       run: |
