--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -100,11 +100,15 @@ jobs:
           path: ~/Library/Caches/pip
         - os: windows-latest
           path: ~\AppData\Local\pip\Cache
+        # pseudo-matrix for python 3.7
         - os: ubuntu-latest
+          path: ~/.cache/pip
           python-version: 3.7
         - os: macos-latest
+          path: ~/Library/Caches/pip
           python-version: 3.7
         - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
           python-version: 3.7
     steps:
     - name: Don't mess with line endings
