--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.8, 3.9]
         include:
         - os: ubuntu-latest
           path: ~/.cache/pip
@@ -20,7 +21,18 @@ jobs:
           path: ~/Library/Caches/pip
         - os: windows-latest
           path: ~\AppData\Local\pip\Cache
-        python-version: [3.7, 3.8, 3.9]
+        # pseudo-matrix for python 3.7
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+          python-version: 3.7
+        #
+        - os: macos-latest
+          path: ~/Library/Caches/pip
+          python-version: 3.7.16
+        #
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
+          python-version: 3.7
 
     steps:
     - name: Don't mess with  line endings
