fix: python 3.7.17 issue (#1408)
* fix: python 3.7.17 issue

Signed-off-by: Lou DeGenaro <lou.degenaro@gmail.com>

* fix: python 3.7.17 issue

Signed-off-by: Lou DeGenaro <lou.degenaro@gmail.com>

---------

Signed-off-by: Lou DeGenaro <lou.degenaro@gmail.com>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -92,6 +92,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.8, 3.9]
         include:
         - os: ubuntu-latest
           path: ~/.cache/pip
@@ -99,7 +100,19 @@ jobs:
           path: ~/Library/Caches/pip
         - os: windows-latest
           path: ~\AppData\Local\pip\Cache
-        python-version: [3.7, 3.8, 3.9]
+        # optional 3.7 test
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+          python-version: 3.7
+        # optional 3.7 test
+        - os: macos-latest
+          path: ~/Library/Caches/pip
+          python-version: 3.7.16
+        # optional 3.7 test
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
+          python-version: 3.7
+          
     steps:
     - name: Don't mess with line endings
       run: |
@@ -122,16 +135,16 @@ jobs:
       run: |
         make develop
     - name: Pytest Fast
-      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8') }}
       run: |
         make test
     - name: Pytest Cov
-      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
       run: |
         make test-cov
 
     - name: Upload artifact
-      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
       uses: actions/upload-artifact@v2
       with:
         name: coverage
@@ -154,7 +167,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
     - uses: actions/cache@v2
       with:
         path: ~/.cache/pip
@@ -178,7 +191,7 @@ jobs:
           -Dsonar.python.coverage.reportPaths=coverage.xml
           -Dsonar.tests=tests/
           -Dsonar.sources=trestle/ 
-          -Dsonar.python.version=3.7
+          -Dsonar.python.version=3.8
           -Dsonar.projectKey=compliance-trestle
           -Dsonar.organization=compliance-trestle
           -Dsonar.cpd.exclusions=trestle/oscal/*.py
