fix: drop python 3.7 support as required
Adding extra steps to run builds on optional for 3.7.16 on macos latest and 3.7 for windows and ubuntu

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -20,7 +20,19 @@ jobs:
           path: ~/Library/Caches/pip
         - os: windows-latest
           path: ~\AppData\Local\pip\Cache
-        python-version: [3.7, 3.8, 3.9]
+        # optional 3.7 test
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+          python-version: 3.7
+        # optional 3.7 test
+        - os: macos-latest
+          path: ~/Library/Caches/pip
+          python-version: 3.7.16
+        # optional 3.7 test
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
+          python-version: 3.7
+        python-version: [3.8, 3.9]
 
     steps:
     - name: Don't mess with  line endings
