--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     paramiko
     ruamel.yaml
     furl
-    pydantic[email]>=1.8.2
+    pydantic[email]>=1.8.2,<2.0.0
     python-dotenv>=0.10.4
     datamodel-code-generator[http] >= 0.11.14
     python-frontmatter
